fix gaps

--- a/midterm/sample-index-page-main/styles.css
+++ b/midterm/sample-index-page-main/styles.css
@@ -69,6 +69,8 @@ nav ul li {
 
 .hero image {
  position: relative; 
+ margin: 0;
+ padding: 0;
 }
 
 .gotham {
